--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,7 +36,9 @@ background: #30bed6; /* Old browsers */
     margin-bottom: 0px;
     float: right;
 }
-
+ul.rightc {
+  margin-right: -115px;
+}
 .rightc li {
     margin: 0px 10px;
     font-size: 13px;
@@ -87,6 +89,7 @@ h1 #title {
     font-size: 1.5em;
     font-weight: bold;
 }
+
 
 img.logo {
     margin-top: -12px;
