--- a/app/templates/anon/map.html
+++ b/app/templates/anon/map.html
@@ -44,17 +44,81 @@
           // Create the map with no initial style specified.
           // It therefore has default styling.
 
-          var myLatLng = {lat: -25.363, lng:131.044 };
+          var myLatLng = {lat: 5.548282, lng: 73.465152 };
           var map = new google.maps.Map(document.getElementById('map'), {
             center: myLatLng,
             scrollwheel: false,
-            zoom: 4
+            zoom: 2
           });
           var marker = new google.maps.Marker({
             map: map,
             position: myLatLng,
-
           });
+          var marker1 = new google.maps.Marker({
+            map: map,
+            position: {lat: 41.69701, lng:2.84466 },
+          });
+          var marker2 = new google.maps.Marker({
+            map: map,
+            position: {lat: 36.61306, lng:-4.501102 },
+          });
+          var marker3 = new google.maps.Marker({
+            map: map,
+            position: {lat: 7.828903, lng: 98.293133 },
+          });
+          var marker4 = new google.maps.Marker({
+            map: map,
+            position: {lat: 39.001231, lng: 1.577547 },
+          });
+          var marker5 = new google.maps.Marker({
+            map: map,
+            position: {lat: 39.283264, lng: 20.404752 },
+          });
+          var marker6 = new google.maps.Marker({
+            map: map,
+            position: {lat: -17.929906, lng: 122.210219 },
+          });
+          var marker7 = new google.maps.Marker({
+            map: map,
+            position: {lat: 43.588317, lng: 15.923435 },
+          });
+          var marker8 = new google.maps.Marker({
+            map: map,
+            position: {lat: 25.06997, lng: 55.133096 },
+          });
+          var marker9 = new google.maps.Marker({
+            map: map,
+            position: {lat: 5.548282, lng: 73.465152 },
+          });
+          var marker10 = new google.maps.Marker({
+            map: map,
+            position: {lat: 27.736975, lng: -15.594621 },
+          });
+          var marker11 = new google.maps.Marker({
+            map: map,
+            position: {lat: -4.442948, lng: 39.536578 },
+          });
+          var marker12 = new google.maps.Marker({
+            map: map,
+            position: {lat: 55.919921, lng: 21.050749 },
+          });
+          var marker13 = new google.maps.Marker({
+            map: map,
+            position: {lat: 21.297012, lng: -157.866883 },
+          });
+          var marker14 = new google.maps.Marker({
+            map: map,
+            position: {lat: 28.054281, lng: -16.733508 },
+          });
+          var marker15 = new google.maps.Marker({
+            map: map,
+            position: {lat: 37.984718, lng: -0.658911 },
+          });
+  
+
+
+
+
 
 
           // Add a style-selector control to the map.
