--- a/app/css/style.css
+++ b/app/css/style.css
@@ -205,5 +205,24 @@ span.theme {
 }
 
 
-#map {
-    display:inline-block !important;width:60%;height: 500px}
+/*#map {
+    display:inline-block !important;width:60%;height: 500px;margin-top: 70px;margin-left: 10px;box-shadow: 0.2px 0.2px 5px grey}*/
+
+    #map {
+        display: inline-block !important;
+        width: 100%;
+        height: 500px;
+        box-shadow: 0.2px 0.2px 5px grey;
+    }
+
+/*iframe {
+  margin-bottom: 200px;
+  width: 500px;
+  height: 300px;
+  margin-left: 30px;
+
+}*/
+iframe {
+    width: 500px;
+    height: 300px;
+}
