--- a/app/templates/anon/home.html
+++ b/app/templates/anon/home.html
@@ -29,5 +29,21 @@
 </div>
 
 <div>
-<a href="/#!/map"></a>
+  <div class="bottom_bar">
+  <div class="container bottom">
+  <div class="col-md-6">
+  <ul class="social bottom">
+  <li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
+  <li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
+  <li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
+  </ul></div>
+
+  <div class="col-md-6">
+  <ul class="rightc bottom">
+  <li><i class="fa fa-envelope-o"></i> webtravel@gmail.com  </li>
+  <li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
+  </ul>
+  </div>
+  </div>
+  </div>
   </div>
