--- a/app/templates/anon/map.html
+++ b/app/templates/anon/map.html
@@ -16,9 +16,11 @@
     }
     /* Display the control once it is inside the map. */
 
+
     #map .map-control {
         display: block;
     }
+
 
 
     .selector-control {
@@ -31,27 +33,31 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-sm-7">
-            <div id="style-selector-control" class="map-control">
-                <select id="style-selector" class="selector-control">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-7">
+                <div id="style-selector-control" class="map-control">
+                    <select id="style-selector" class="selector-control">
           <option value="default">Default</option>
           <option value="silver">Silver</option>
           <option value="night">Night mode</option>
           <option value="retro" selected="selected">Retro</option>
           <option value="hiding">Hide features</option>
         </select></div>
-        <div id="map"></div>
-          </div>
-          <div class="col-sm-5">
-            <iframe src="https://www.lookr.com/lookout/1196779927#action-play-lifetime" />
-            <div><span class="title">Andilana</span><br><span class="pays">Spain</span></div>
+                <div id="map"></div>
+            </div>
+            <div class="col-sm-5">
+                <iframe src="https://www.lookr.com/lookout/1196779927#action-play-lifetime" />
+                <div><span class="title">Andilana</span><br><span class="pays">Spain</span></div>
+                <div>
+                    <h3>About this webcam</h3>
+                    <p>This webcam is currently assigned to Andilana Beach Resort. It was originally added on 27 juin 2014 and has been viewed 116 379 times since then. The current picture above was taken il y a 17 minutes, thereby the webcam seems to be
+                        currently active. So far, it was added to their personal favorites on webcams.travel by 5 people.</p>
+                </div>
 
-
-          </div>
-      </div>
-  </div>
+            </div>
+        </div>
+    </div>
 
 
 
