--- a/app/templates/anon/map.html
+++ b/app/templates/anon/map.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-7 map">
                 <div id="style-selector-control" class="map-control">
                     <select id="style-selector" class="selector-control">
           <option value="default">Default</option>
@@ -46,7 +46,7 @@
         </select></div>
                 <div id="map"></div>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 map">
                 <iframe src="https://www.lookr.com/lookout/1196779927#action-play-lifetime" />
                 <div><span class="title">Andilana</span><br><span class="pays">Spain</span></div>
                 <div>
@@ -59,7 +59,25 @@
         </div>
     </div>
 
+    <div>
+      <div class="bottom_bar">
+      <div class="container bottom">
+      <div class="col-md-6">
+      <ul class="social bottom">
+      <li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
+      <li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
+      <li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
+      </ul></div>
 
+      <div class="col-md-6">
+      <ul class="rightc bottom">
+      <li><i class="fa fa-envelope-o"></i> webtravel@gmail.com  </li>
+      <li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
+      </ul>
+      </div>
+      </div>
+      </div>
+      </div>
 
 
 
