--- a/app/templates/anon/home.html
+++ b/app/templates/anon/home.html
@@ -1,49 +1,54 @@
-</div class="row">
-<div class="col-xs-12 text-center">
-    <h1><span id="title">web</span>.<span id="title2">travel </span> come travel through a webcam</h1>
-</div>
+<div class="row">
+    <div class="col-xs-12 text-center">
+        <h1><span id="title">web</span>.<span id="title2">travel </span> come travel through a webcam</h1>
+    </div>
 </div>
 
 <div class="row wrap">
-   <div class="search">
-      <input type="text" class="searchTerm" placeholder="What are you looking for?">
-      <button type="submit" class="searchButton">
+    <div class="search">
+        <input type="text" class="searchTerm" placeholder="What are you looking for?">
+        <button type="submit" class="searchButton">
         <i class="fa fa-search"></i>
      </button>
-   </div>
+    </div>
 </div>
-
-
 
 <div class="container">
     <div id="row1" class="row">
-        <div class="col-sm-4"><span class="theme">Beach</span><button class="btn next pull-right" type="button" name="button" ng-click="runBeach()">More</button><a href="/#!/map"><img class="vue" src="{{beach}}"></a><span class="title">{{title1}}</span><br><span class="pays">{{country1}}</span></div>
-        <div class="col-sm-4"><span class="theme">Mountain</span><button class="btn next pull-right" type="button" name="button" ng-click="runMountain()">More</button><a href="/#!/map"><img class="vue" src="{{mountain}}"></a><span class="title">{{title2}}</span><br><span class="pays">{{country2}}</span></div>
-        <div class="col-sm-4"><span class="theme">Island</span><button class="btn next pull-right" type="button" name="button" ng-click="runIsland()">More</button><a href="/#!/map"><img class="vue" src="{{island}}"></a><span class="title">{{title3}}</span><br><span class="pays">{{country3}}</span></div>
+        <div class="col-sm-4"><span class="theme">Beach</span><button class="btn next pull-right" type="button" name="button" ng-click="runBeach()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{beach}}"></a><span class="title">{{title1}}</span><br><span class="pays">{{country1}}</span></div>
+        <div class="col-sm-4"><span class="theme">Mountain</span><button class="btn next pull-right" type="button" name="button" ng-click="runMountain()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{mountain}}"></a><span class="title">{{title2}}</span><br><span class="pays">{{country2}}</span></div>
+        <div class="col-sm-4"><span class="theme">Island</span><button class="btn next pull-right" type="button" name="button" ng-click="runIsland()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{island}}"></a><span class="title">{{title3}}</span><br><span class="pays">{{country3}}</span></div>
     </div>
     <div id="row2" class="row">
-        <div class="col-sm-4"><span class="theme">City</span><button class="btn next pull-right" type="button" name="button" ng-click="runMeteo()">More</button><a href="/#!/map"><img class="vue" src="{{meteo}}"></a><span class="title">{{title4}}</span><br><span class="pays">{{country4}}</span></div>
-        <div class="col-sm-4"><span class="theme">Golf</span><button class="btn next pull-right" type="button" name="button" ng-click="runGolf()">More</button><a href="/#!/map"><img class="vue" src="{{golf}}"></a><span class="title">{{title5}}</span><br><span class="pays">{{country5}}</span></div>
-        <div class="col-sm-4"><span class="theme">Lake</span><button class="btn next pull-right" type="button" name="button" ng-click="runLake()">More</button><a href="/#!/map"><img class="vue" src="{{lake}}"></a><span class="title">{{title6}}</span><br><span class="pays">{{country6}}</span></div>
+        <div class="col-sm-4"><span class="theme">City</span><button class="btn next pull-right" type="button" name="button" ng-click="runMeteo()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{meteo}}"></a><span class="title">{{title4}}</span><br><span class="pays">{{country4}}</span></div>
+        <div class="col-sm-4"><span class="theme">Golf</span><button class="btn next pull-right" type="button" name="button" ng-click="runGolf()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{golf}}"></a><span class="title">{{title5}}</span><br><span class="pays">{{country5}}</span></div>
+        <div class="col-sm-4"><span class="theme">Lake</span><button class="btn next pull-right" type="button" name="button" ng-click="runLake()">More</button>
+            <a href="/#!/map"><img class="vue" src="{{lake}}"></a><span class="title">{{title6}}</span><br><span class="pays">{{country6}}</span></div>
     </div>
 </div>
 
 <div>
-  <div class="bottom_bar">
-  <div class="container bottom">
-  <div class="col-md-6">
-  <ul class="social bottom">
-  <li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
-  <li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
-  <li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
-  </ul></div>
+    <div class="bottom_bar">
+        <div class="container bottom">
+            <div class="col-md-6">
+                <ul class="social bottom">
+                    <li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
+                </ul>
+            </div>
 
-  <div class="col-md-6">
-  <ul class="rightc bottom">
-  <li><i class="fa fa-envelope-o"></i> webtravel@gmail.com  </li>
-  <li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
-  </ul>
-  </div>
-  </div>
-  </div>
-  </div>
+            <div class="col-md-6">
+                <ul class="rightc bottom">
+                    <li><i class="fa fa-envelope-o"></i> webtravel@gmail.com </li>
+                    <li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
