--- a/app/templates/anon/navbar.html
+++ b/app/templates/anon/navbar.html
@@ -1,51 +1,48 @@
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <header>
-<div class="top_bar">
-<div class="container">
-<div class="col-md-6">
-<ul class="social">
-<li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
-<li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
-<li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
-</ul></div>
+    <div class="top_bar">
+        <div class="container">
+            <div class="col-md-6">
+                <ul class="social">
+                    <li><a target="_blank" href="#"><i class="fa fa-facebook text-white"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-twitter text-white"></i></a></li>
+                    <li><a target="_blank" href="#"><i class="fa fa-instagram text-white"></i></a></li>
+                </ul>
+            </div>
 
-<div class="col-md-6">
-<ul class="rightc">
-<li><i class="fa fa-envelope-o"></i> webtravel@gmail.com  </li>
-<li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
-</ul>
-</div>
-</div>
-</div>
-<!--top_bar-->
+            <div class="col-md-6">
+                <ul class="rightc">
+                    <li><i class="fa fa-envelope-o"></i> webtravel@gmail.com </li>
+                    <li><i class="fa fa-user"></i> <a href="#">Become a Partner</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--top_bar-->
 
-
-
-<nav class="navbar navbar-default" role="navigation">
-    	<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img class="logo" src="img/map.svg" width="100px" height="100px"></a>
-			</div>
+                <a class="navbar-brand" href="#"><img class="logo" src="img/map.svg" width="100px" height="100px"></a>
+            </div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>
-          <li><a href="#">Partners</a></li>
-          <li><a href="#">Login</a></li>
-				</ul>
-
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
 </header>
